# invoke

./: .gitignore  .gitmodules  README.md  agent_log.txt  auto_log.txt  bench_bin  build.zig  bunny_displacement.pcb  current_dataset.pcb  imgui.ini  interlat_log.txt  mlp_log.txt  model.kan  replace_sdf.py
artifacts/datasets/: bunny.pcb  bunny_gpu_full.pcb  bunny_perfect.pcb  bunny_refined.pcb  bunny_refined_v2.pcb  bunny_test.pcb  test_run.pcb
artifacts/models/: bunny.kan  bunny_gpu_final.kan  bunny_gpu_final_disp.kan  bunny_gpu_final_fixed.kan  bunny_gpu_full.kan  bunny_gpu_test.kan  bunny_gpu_vec.kan  bunny_perfect.kan  bunny_refined.kan  bunny_refined_v2.kan  test_run.kan
docs/: CHANGELOG.md  FEATURES.md  OPTIMIZATION_ROADMAP.md  PHILOSOPHY.md  PIPELINE_ROADMAP.md  TECHNICAL_MANIFEST.md  VULKAN_STRATEGY.md
docs/architecture/: vae_lora_strategy.md
examples/agent/: executor.lua  planner.lua  topology.lua
examples/ants/: ant.lua  common.lua  render.lua  topology.lua
examples/autonomous/: architect.lua  evaluator.lua  prober.lua  topology.lua
examples/boids/: boids.zig  invoke.zig  moontide.zig  reconciler.lua  topology.lua
examples/bridge/: attach.lua
examples/er_sim/: simulation.lua  timekeeper.lua  topology.lua
examples/factory/: assembler.lua  common.lua  dashboard.lua  miner.lua  smelter.lua  topology.lua
examples/forest/: ensemble.lua  scanner.lua  topology.lua  tree.lua  visualizer.lua
examples/ik/: ik_solver.lua  render.lua  target.lua  topology.lua
examples/interlat/: decoder.lua  encoder.lua  modulator.lua  (+1 more)
pipelines/: distill_triposr_uv.py
projects/imgui/: CMakeLists.txt
sdk/: invoke.zig  invoke_abi.h  moontide.h  moontide.zig  moontide_host.h  moontide_simd.zig
src/: main.zig  tests_all.zig
tests/: main_test.zig  neuromorphic_core_test.zig  run_integration.sh  test_bundle.sh  test_script.lua  topology_test.lua
tools/: asset_factory.py  pcb_to_obj_fast.py  test_run.sh
(+109 files in other folders)
